# DexGrasp-Anything-Unofficial

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: default.yaml  toy.yaml
scripts/: smoke_test.py
src/dexgrasp_anything_unofficial/: starter.py
