[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexgrasp-anything-unofficial"
version = "0.1.0"
description = "Unofficial PyTorch starter for DexGrasp Anything: Towards Universal Robotic Dexterous Grasping with Physics Awareness."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Minghao Liu" }]
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "numpy>=1.24"
]

[tool.setuptools.packages.find]
where = ["src"]
